Red Line on menu bar (Mac OS) #64024

Closed
opened 2019-04-30 16:56:26 +02:00 by Alexander · 36 comments

blender_redline_bug.mov

{F6995492}System Information
Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits
Graphics card: AMD Radeon Pro 560 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38

Blender Version
Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-04-29 15:21, hash: fa5dd59f98
Worked: (optional)

Short description of error
[Please fill out a short description of the error here]

I have a bug when use hide menu bar on my mac, please check that.

Exact steps for others to reproduce the error
[Please describe the exact steps needed to reproduce the issue]
[Based on the default startup or an attached .blend file (as simple as possible)]

[blender_redline_bug.mov](https://archive.blender.org/developer/F6995478/blender_redline_bug.mov) {[F6995492](https://archive.blender.org/developer/F6995492/Screenshot_2019-04-30_at_17.36.38.png)}**System Information** Operating system: Darwin-18.5.0-x86_64-i386-64bit 64 Bits Graphics card: AMD Radeon Pro 560 OpenGL Engine ATI Technologies Inc. 4.1 ATI-2.8.38 **Blender Version** Broken: version: 2.80 (sub 60), branch: master, commit date: 2019-04-29 15:21, hash: `fa5dd59f98` Worked: (optional) **Short description of error** [Please fill out a short description of the error here] I have a bug when use hide menu bar on my mac, please check that. **Exact steps for others to reproduce the error** [Please describe the exact steps needed to reproduce the issue] [Based on the default startup or an attached .blend file (as simple as possible)]
Author

Added subscriber: @stalker0701

Added subscriber: @stalker0701

#70607 was marked as duplicate of this issue

#70607 was marked as duplicate of this issue

#68913 was marked as duplicate of this issue

#68913 was marked as duplicate of this issue

#70411 was marked as duplicate of this issue

#70411 was marked as duplicate of this issue

#68965 was marked as duplicate of this issue

#68965 was marked as duplicate of this issue

#67752 was marked as duplicate of this issue

#67752 was marked as duplicate of this issue

#66921 was marked as duplicate of this issue

#66921 was marked as duplicate of this issue

#66500 was marked as duplicate of this issue

#66500 was marked as duplicate of this issue

Added subscribers: @WilliamReynish, @ZedDB

Added subscribers: @WilliamReynish, @ZedDB

@WilliamReynish can you reproduce this?

@WilliamReynish can you reproduce this?

No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version?

No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version?

Most likely, yes.

Most likely, yes.
Author

In #64024#669667, @WilliamReynish wrote:
No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version?

So... i have 4 different Mac's and have this problem on all. When i use full screen mode i see the red line, but if i turn off "Automatically hide and show the menu bar" it fix this bug and i can work without red line in full screen mode

> In #64024#669667, @WilliamReynish wrote: > No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version? So... i have 4 different Mac's and have this problem on all. When i use full screen mode i see the red line, but if i turn off "Automatically hide and show the menu bar" it fix this bug and i can work without red line in full screen mode
Author

In #64024#669667, @WilliamReynish wrote:
No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version?

If you want to reproduce this bug you need to close blender, hide your menu bar and after open blender go to full screen mode. If you uncheck "hide menu bar" it fix blender red line and then you can switch back to the first setting and blender work correctly

> In #64024#669667, @WilliamReynish wrote: > No, it seems to work normally here on MacOS Mojave 10.14.4. Could be related to a specific GPU or driver version? If you want to reproduce this bug you need to close blender, hide your menu bar and after open blender go to full screen mode. If you uncheck "hide menu bar" it fix blender red line and then you can switch back to the first setting and blender work correctly

@stalker0701 I still cannot reproduce it here, even if I do it in the order you describe.

@stalker0701 I still cannot reproduce it here, even if I do it in the order you describe.

Added subscriber: @brecht

Added subscriber: @brecht

We've had this reported before in #53123 (Mac OS X - System Preferences > General > Automatically hide and show the menu bar). The conclusion there was that it happens in other apps too which makes it likely to be a bug in macOS itself that we can't fix in Blender.

Are you seeing similar issues in other apps when going fullscreen?

We've had this reported before in #53123 (Mac OS X - System Preferences > General > Automatically hide and show the menu bar). The conclusion there was that it happens in other apps too which makes it likely to be a bug in macOS itself that we can't fix in Blender. Are you seeing similar issues in other apps when going fullscreen?
Author

In #64024#674409, @brecht wrote:
We've had this reported before in #53123 (Mac OS X - System Preferences > General > Automatically hide and show the menu bar). The conclusion there was that it happens in other apps too which makes it likely to be a bug in macOS itself that we can't fix in Blender.

Are you seeing similar issues in other apps when going fullscreen?

So.. I use many applications and have this bug only with blender. But i have small bug in modo when i work with full screen, modo duplicate bottom menu line...look at this Screenshot 2019-05-09 at 12.32.35.png

> In #64024#674409, @brecht wrote: > We've had this reported before in #53123 (Mac OS X - System Preferences > General > Automatically hide and show the menu bar). The conclusion there was that it happens in other apps too which makes it likely to be a bug in macOS itself that we can't fix in Blender. > > Are you seeing similar issues in other apps when going fullscreen? So.. I use many applications and have this bug only with blender. But i have small bug in modo when i work with full screen, modo duplicate bottom menu line...look at this ![Screenshot 2019-05-09 at 12.32.35.png](https://archive.blender.org/developer/F7020418/Screenshot_2019-05-09_at_12.32.35.png)
Author

Hello, after the last update I see huge red square :)

red_blender_bug.mov

Hello, after the last update I see huge red square :) [red_blender_bug.mov](https://archive.blender.org/developer/F7088609/red_blender_bug.mov)

Added subscriber: @jenkm

Added subscriber: @jenkm

@WilliamReynish

Turn on both the "Automatically hide and show the menu bar" and the "Automatically hide and show the Dock" and then run Blender.

@WilliamReynish Turn on both the "Automatically hide and show the menu bar" and the "Automatically hide and show the Dock" and then run Blender.

Also, this bug only appears when you switch to fullscreen mode from a maximized window (like Blender runs by default),
but if you resize the window a bit, then everything works fine.

Also, this bug only appears when you switch to fullscreen mode from a maximized window (like Blender runs by default), but if you resize the window a bit, then everything works fine.

Added subscriber: @arcnor

Added subscriber: @arcnor

Added subscribers: @BenRacicot, @EitanSomething

Added subscribers: @BenRacicot, @EitanSomething

Added subscribers: @DanielHoughton, @mano-wii

Added subscribers: @DanielHoughton, @mano-wii

Added subscriber: @42demons

Added subscriber: @42demons

Added subscriber: @KarenA

Added subscriber: @KarenA

Added subscriber: @Shawnee

Added subscriber: @Shawnee

Added subscriber: @robbarrett

Added subscriber: @robbarrett

Added subscriber: @sebbas

Added subscriber: @sebbas

Was able to reproduce this in ea1174bde9 following @jenkm 's description. In fact, this bug even shows up in 2.79 (tried out both 2.79a and 2.79b).

It's likely that the OSX version plays a big role. I tested it on Mojave 10.14.6.

Was able to reproduce this in ea1174bde9ed following @jenkm 's description. In fact, this bug even shows up in 2.79 (tried out both 2.79a and 2.79b). It's likely that the OSX version plays a big role. I tested it on Mojave 10.14.6.

Removed subscriber: @KarenA

Removed subscriber: @KarenA

This issue was referenced by 5780142679

This issue was referenced by 57801426792c3ca9c126c3c720ca6f337815294c

Changed status from 'Confirmed' to: 'Resolved'

Changed status from 'Confirmed' to: 'Resolved'
Brecht Van Lommel self-assigned this 2020-01-31 18:43:18 +01:00

A fix for this issue has been committed thanks to @jenkm.

It's unclear if this fixes all cases. If there is a case not fixed in the next build, please let us know and provide exact steps to reproduce the problem.

A fix for this issue has been committed thanks to @jenkm. It's unclear if this fixes all cases. If there is a case not fixed in the next build, please let us know and provide exact steps to reproduce the problem.

This issue was referenced by bf361fc9a0

This issue was referenced by bf361fc9a00cdbbf5956e402b92b7b092a3aa654
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
8 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#64024
No description provided.