Fix T64024: monitor/fullscreen switching on macOS shows red line artifacts